fix different horizontal positions on longer/shorter pages
always show scrollbar

--- a/dachor_website/static/css/custom.css
+++ b/dachor_website/static/css/custom.css
@@ -5,6 +5,7 @@ body {
     font-weight: bold;
     letter-spacing: .01em;
     font-size: 1rem;
+    overflow-y: scroll;
 }
 
 body h1 {
